--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - "2.7"
 cache: pip
 install:
-  - pip install -r requirements.txt
+  - sudo pip install -r requirements.txt
 script:
   - python tests.py
