--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-language: python
-python:
-  - "2.7"
-script:
-  - python tests.py
+branches:
+  only:
+    - master
+    - /^deploy-.*$/ # regex ok
